# disc-steward

./: .gitignore  README.md  config.example.yaml  pyproject.toml  video-preview.txt
deploy/docker/disc-steward-ffmpeg/: Dockerfile  README.md  compose.yaml
deploy/systemd/: disc-steward-automation.service  disc-steward-preview.service  disc-steward-review.service  disc-steward-watch.service  disc-steward.target
disc_steward/: __init__.py  classifier.py  cleanup.py  cli.py  config.py  db.py  jellyfin.py  jellyfin_logs.py  llm.py  metadata.py  models.py  notifications.py  preview.py  reports.py  review.py  scanner.py  status.py  subtitle_extraction.py  subtitle_planner.py  title_discovery.py  transfer.py  validation.py  web.py  work_orders.py
disc_steward/static/: win31-artifacts.json  win31-core.css  win31-motion.css
docs/plans/: 2026-07-03-disc-pipeline-automation.md  2026-07-06-disc-steward-large-review-job-usability.md  2026-07-15-design-system-static-asset-seam.md
scripts/: convert_ass_to_srt_fallback  extract_subtitles  normalize_srt_utf8  tag_subtitle_streams  validate_srt
templates/: disc_report.html  review.html
tests/: test_classifier.py  test_config_yaml_fallback.py  test_metadata_lookup.py  test_notifications.py  test_paths_validation_transfer.py  test_phase2_review.py  test_phase3_pipeline.py  test_phase4_cleanup_llm_status.py  test_phase4_subtitles.py  test_python_compat.py  test_scanner.py  test_video_previews.py  test_web_metadata_playback.py
tests/browser/: test_review_ui.py
tests/fixtures/: ffprobe_extra.json  ffprobe_movie.json
(+6 files in other folders)
