[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disc-steward"
version = "0.1.0"
description = "Safe control-plane service for homelab disc ripping, review, and media pipeline handoff."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
  "rapidocr-onnxruntime>=1.4.4"
]

[project.optional-dependencies]
test = [
  "pillow>=10",
  "pytest>=8.0",
  "pytest-playwright>=0.7",
]

[project.scripts]
disc-steward = "disc_steward.cli:main"

[tool.setuptools.packages.find]
include = ["disc_steward*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
